Code till  Auth

--- a/config.env
+++ b/config.env
@@ -2,3 +2,4 @@ PORT=3000
 DB_PASSWORD=tL5H3xqtr5ncUtFU
 DB_URI = mongodb+srv://burrameghana:<password>@chat-app-cluster.bjim35j.mongodb.net/?retryWrites=true&w=majority
 JWT_SECRET = dfbegf23E2RQWER124
+SG_KEY = 
