--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@types/jsonwebtoken": "^9.0.5",
     "@types/mongodb": "^4.0.7",
     "@types/mongoose": "^5.11.97",
+    "@types/nodemailer": "^6.4.14",
     "@types/otp-generator": "^4.0.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-mongo-sanitize": "^2.2.0",
@@ -33,6 +35,7 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.8",
     "otp-generator": "^4.0.1",
     "xss": "^1.0.14"
   }
